# genome-annotator

./: .gitignore  Annotate.md  Annotate.smk  README.md  config.yaml  meta.yaml  pyproject.toml  setup.py
genotator/: config.yaml
genotator/scripts/: create_qlist.py  parseFastAniNonRedundant.py  parse_ncbi_data.py  tigrfam-table.py
genotator/snakefiles/: Annotate.md  Annotate.smk  Download.smk  Filter.smk
scripts/: cazyme-table.py  combineFunctionsAndGeneCalls.py  rast-table.py
