[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Genome Annotator"
version = "0.0.1"
authors = [
  { name="Dane Deemer", email="ddeemer@purdue.edu" },
]
description = "A package for annotating and analyzing genomes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ddeemerpurdue/GenomeAnnotator"
"Bug Tracker" = "https://github.com/ddeemerpurdue/GenomeAnnotator/issues"
